编译原理/实习1/工程文件/exp1/src/exp1/MyNewGrammar.jjt
/**
 * JJTree template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options
{
  static = false;
}

PARSER_BEGIN(MyNewGrammar)
package exp1;

import java.io.FileInputStream;
import java.io.InputStream;

public class MyNewGrammar
{
  public static void main(String args [])
  {
    System.out.println("Reading from textfile");
    try
    {
	  InputStream in = new FileInputStream("Input.txt");//与文件下的Input.txt文件建立输入流
	  MyNewGrammarTokenManager manager = new MyNewGrammarTokenManager(new SimpleCharStream(in));//通过JavaCC自带的两个类进行数据的输入
      Token t;
      t = manager.getNextToken();//通过getNextToken获取数据
      while(t.kind != 0) {//当读到数据的结尾，即EOF时，其内部的标识符为0，所以以此为结束标志
	  	System.out.println("(" + t.kind + " " + t.image + ")");//输出内部标识符与自身
        t = manager.getNextToken();
      }
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }
}

PARSER_END(MyNewGrammar)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| < "//" (~[ "\n", "\r" ])*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < "/*" (~[ "*" ])* "*"
    (
      ~[ "/" ] (~[ "*" ])* "*"
    )*
    "/" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL :
    < DECIMAL_LITERAL > ([ "l", "L" ])?
  | < HEX_LITERAL > ([ "l", "L" ])?
  | < OCTAL_LITERAL > ([ "l", "L" ])? 
    >
| < #DECIMAL_LITERAL : [ "1"-"9" ] ([ "0"-"9" ])* >
| < #HEX_LITERAL : "0" [ "x", "X" ] ([ "0"-"9", "a"-"f", "A"-"F" ])+ >
| < #OCTAL_LITERAL : "0" ([ "0"-"7" ])* >
}
TOKEN : /* special signal */
{
  < MAIN : "main" >
}

TOKEN : /* keyword */
{
  < IF : "if" >
| < WHILE : "while" >
}

TOKEN : /* operators */
{
  < ADD : "+" >
| < MUL : "*" >
| < DIV : "/" >
| < MINUS : "-" >
| < MOD : "%" >
| < EQL : "=" >
| < UEQL : "!=" >
| < LT : "<" >
| < MT : ">" >
| < LB : "{" >
| < RB : "}" > 
}

TOKEN : /* var */
{
  < VOID : "void" >
| < INT : "int" >
| < FLOAT : "float" >
}
TOKEN : /* separators */
{
  < SEMI : ";" >
|  < COMMA : "," >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER :
    < LETTER >
    (
      < LETTER >
    | < DIGIT >
    )* >
| < #LETTER : [ "_", "a"-"z", "A"-"Z" ] >
| < #DIGIT : [ "0"-"9" ] >
}

SimpleNode Start() :
{}
{
  Expression() ";"
  {
    return jjtThis;
  }
}

void Expression() :
{}
{
  AdditiveExpression()
}

void AdditiveExpression() :
{}
{
  MultiplicativeExpression()
  (
    (
      "+"
    | "-"
    )
    MultiplicativeExpression()
  )*
}

void MultiplicativeExpression() :
{}
{
  UnaryExpression()
  (
    (
      "*"
    | "/"
    | "%"
    )
    UnaryExpression()
  )*
}

void UnaryExpression() :
{}
{
  "(" Expression() ")"
| Identifier()
| Integer()
}

void Identifier() :
{}
{
  < IDENTIFIER >
}

void Integer() :
{}
{
  < INTEGER_LITERAL >
}
